--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2000,6 +2000,12 @@
 
 		/* Content */
 
+			#map {
+				width: 100%;
+				height: 400px;
+				background-color: grey;
+			}
+
 			#content > > section,
 			#content > > article {
 				margin: 5em 0 0 0;
