--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1556,7 +1556,7 @@
 			text-align: center;
 		}
 
-	#banner-wrapper {
+	.banner-wrapper {
 		position: relative;
 		overflow: hidden;
 		background: #fff;
@@ -1567,12 +1567,12 @@
 		box-shadow: inset 0px -8px 0px 0px #fff, inset 0px -10px 0px 0px #e5e5e5, inset 0px 8px 0px 0px #fff, inset 0px 10px 0px 0px #e5e5e5;
 	}
 
-		/* #banner-wrapper .inner {
+		/* .banner-wrapper .inner {
 			background: url("../../images/banner.jpg");
 			background-size: cover;
 		} */
 
-		#banner-wrapper p {
+		.banner-wrapper p {
 			text-align: center;
 		}
 
@@ -1713,6 +1713,10 @@
 
 /* Banner */
 
+.separationImages{
+	max-width: :50px;
+}
+
 	#banner {
 		position: relative;
 		text-transform: uppercase;
@@ -1841,7 +1845,7 @@
 				padding: 6em 0 6em 0;
 			}
 
-			#banner-wrapper {
+			.banner-wrapper {
 				padding: 3em 0 3em 0;
 			}
 
@@ -2083,7 +2087,7 @@
 				padding: 4em 0 4em 0;
 			}
 
-			#banner-wrapper {
+			.banner-wrapper {
 				padding: 2em 0 2em 0;
 			}
 
@@ -2402,7 +2406,7 @@
 				padding: 3em 20px 3em 20px;
 			}
 
-			#banner-wrapper {
+			.banner-wrapper {
 				padding: 2em 0 2em 0;
 			}
 
